apps/sample-api/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-api
spec:
  replicas: 1
  selector:
    matchLabels: { app: sample-api }
  template:
    metadata:
      labels: { app: sample-api }
    spec:
      containers:
        - name: app
          image: hashicorp/http-echo:0.2.3
          args:
            - "-text=Hello from homelab!"
          ports:
            - containerPort: 5678
