apps/sample-api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-api
spec:
  selector: { app: sample-api }
  ports:
    - name: http
      port: 80
      targetPort: 5678
