apps/sample-api/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-api
  namespace: prod
  annotations:
    kubernetes.io/ingress.class: haproxy
spec:
  rules:
  - http:
      paths:
      - path: /sample-api
        pathType: Prefix
        backend:
          service:
            name: sample-api
            port:
              number: 80
